# preboot

./: .bazelrc  .gitignore  .npmignore  BUILD.bazel  CONTRIBUTING.md  README.md  WORKSPACE  angular.tsconfig.json  browser.d.ts  browser.js  bs-config.json  build-config.js  build.js  gulpfile.js  karma-test-shim.js  karma.conf.js  npm-shrinkwrap.json  package-lock.json  package.json  packages.bzl  preboot.d.ts  prettier.config.js  protractor.conf.js  record.d.ts  record.js  replay.js  replay.ts  rollup-globals.bzl  server.d.ts  server.js  tsconfig-publish.json  tsconfig.json  tslint.json  typings.json
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
__build/src/: preboot_interfaces.d.ts  preboot_interfaces.js  preboot_interfaces.js.map
__build/src/browser/: preboot_browser.d.ts  preboot_browser.js  preboot_browser.js.map
__build/src/inline/: preboot_inline.d.ts  preboot_inline.js  preboot_inline.js.map
__build/src/node/: preboot_node.d.ts  preboot_node.js  preboot_node.js.map
__build/test/: preboot_test_utils.d.ts  preboot_test_utils.js  preboot_test_utils.js.map
__build/test/browser/: preboot_browser_spec.js  preboot_browser_spec.js.map
__build/test/inline/: preboot_inline_spec.js  preboot_inline_spec.js.map
__build/test/node/: preboot_node_spec.js  preboot_node_spec.js.map
buildtasks/: clean_task.js  dist_task.js  examples_task.js  lint_task.js  tsc_task.js
integration/: .gitignore  bs-config.json  build.js  npm-shrinkwrap.json  package-lock.json  package.json  protractor.conf.js
integration/e2e/: e2e.browser.spec.ts  e2e.utils.ts  tsconfig.json
integration/src/: index.html  postrender.ts  prerender.ts  tsconfig.json  tsconfig.postrender.json  tsconfig.prerender.json  webpack.config.js
integration/src/app/: app.module.ts
scripts/: build-packages-dist.js  run-component-tests.js
src/: BUILD.bazel  README.md  index.js  index.ts  preboot.d.ts  preboot.ts  preboot_interfaces.ts  record.ts  replay.ts  tokens.ts
src/browser/: browser-preboot.module.d.ts  browser-preboot.module.js  browser-preboot.module.ts  event.replayer.d.ts  event.replayer.factory.ts  event.replayer.js  event.replayer.ts  index.d.ts  index.js  index.ts  preboot_browser.ts  window.d.ts  window.js  window.ts
src/common/: get-node-key.d.ts  get-node-key.js  get-node-key.ts  index.js  index.ts  preboot.interfaces.d.ts  preboot.interfaces.js  preboot.interfaces.ts
src/e2e-app/: package.json  tsconfig.json
src/e2e-app/src/: main.ts  postrender.ts  tsconfig.json  tsconfig.prerender.json
src/e2e-app/src/app/: app.module.ts
src/inline/: preboot_inline.ts
src/lib/: BUILD.bazel  module.ts  ng-package.json  package.json  pkg_replacements.bzl  preboot.e2e.spec.ts  provider.ts  public-api.ts  rollup_globals.bzl  tsconfig.json  tsconfig.lib.json  tsconfig.spec.json
src/lib/angular/: BUILD.bazel  module.ts  provider.ts  public-api.ts
src/lib/api/: BUILD.bazel  event.recorder.spec.ts  event.recorder.ts  event.replayer.spec.ts  event.replayer.ts  index.ts  inline.preboot.code.spec.ts  inline.preboot.code.ts  preboot.mocks.ts  public-api.ts
src/lib/common/: BUILD.bazel  get-node-key.spec.ts  get-node-key.ts  index.ts  preboot.interfaces.ts  preboot.mocks.ts  public-api.ts  tokens.ts
src/lib/module/: provider.ts
src/lib/testing/: e2e.utils.ts
src/node/: event.recorder.ts  index.ts  node-preboot.module.ts  preboot.generator.ts  preboot_node.ts
src/server/: event.recorder.d.ts  event.recorder.js  event.recorder.ts  index.d.ts  index.js  index.ts  inline.preboot.code.ts  preboot.generator.d.ts  preboot.generator.js  preboot.generator.ts  server-preboot.module.d.ts  server-preboot.module.js  server-preboot.module.ts  server.factory.ts
test/: angular-test-init-spec.ts  jasmine.json  jasmine.reporter.ts  karma-test-shim.js  karma.conf.js  preboot-test-utils.ts  preboot_test_utils.ts
test/browser/: event.replayer.spec.ts
test/common/: get-node-key.spec.ts
test/e2e/: e2e.app.d.ts  e2e.app.js  e2e.app.ts  e2e.browser.js  e2e.browser.module.d.ts  e2e.browser.module.js  e2e.browser.module.ts  e2e.browser.spec.js  e2e.browser.spec.ts  e2e.browser.ts  e2e.client.spec.ts  e2e.client.ts  e2e.server.d.ts  e2e.server.gen.d.ts  e2e.server.gen.js  e2e.server.gen.ts  e2e.server.js  e2e.server.module.js  e2e.server.module.ts  e2e.server.ts  e2e.utils.d.ts  e2e.utils.js  e2e.utils.ts  protractor.conf.js  tsconfig.e2e.json  webpack.config.js
test/inline/: preboot_inline_spec.ts
test/node/: event.recorder.spec.ts  node-preboot.module.spec.ts  preboot.generator.spec.ts  preboot_node_spec.ts
test/server/: event.recorder.spec.ts  preboot.generator.spec.ts  server-preboot.module.spec.ts
test/unit/browser/: event.replayer.spec.js  event.replayer.spec.ts
test/unit/common/: get-node-key.spec.js  get-node-key.spec.ts
test/unit/server/: event.recorder.spec.js  event.recorder.spec.ts  inline.preboot.code.spec.ts  preboot.generator.spec.d.ts  preboot.generator.spec.js  preboot.generator.spec.ts  server-preboot.module.spec.d.ts  server-preboot.module.spec.js  server-preboot.module.spec.ts
test/utils/: index.js  index.ts  jasmine.json  jasmine.reporter.d.ts  jasmine.reporter.js  preboot-test-utils.ts  preboot.mocks.d.ts  preboot.mocks.js  preboot.mocks.ts
tools/: BUILD.bazel  create-system-config.bzl  defaults.bzl  system-config-tmpl.js  tsconfig.json
tools/axe-protractor/: build-message.js
tools/dev-server/: dev-server.ts  main.ts
tools/package-tools/: build-config.ts
tools/postinstall/: @angular_bazel_ng_module.patch  apply-patches.js  manifest_externs_hermeticity.patch  update-ngcc-main-fields.js
tools/tslint-rules/: noExposedTodoRule.ts  tsLoaderRule.js  validateDecoratorsRule.ts
