package(default_visibility = ["//visibility:public"])

exports_files(["package.json"])

load("@angular//:index.bzl", "ng_module")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test_suite")
load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")

ng_module(
    name = "common",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    module_name = "preboot/common",
    tsconfig = "//src/lib:tsconfig.lib.json",
    deps = [],
)

ts_library(
    name = "common_test_sources",
    testonly = 1,
    srcs = glob(["**/*.spec.ts"]),
    tsconfig = "//src/lib:tsconfig.lib.json",
    deps = [
        ":common",
        "@rxjs",
        "@rxjs//operators",
    ],
)

ts_web_test_suite(
    name = "unit_tests",
    timeout = "short",
    bootstrap = ["//:web_test_bootstrap_scripts"],
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
        "@io_bazel_rules_webtesting//browsers:firefox-local",
    ],

    # Do not sort
    deps = [
        "//:tslib_bundle",
        "//:angular_bundles",
        "//:angular_test_bundles",
        "//test:angular_test_init",
        ":common_test_sources",
    ],
)

jasmine_node_test(
    name = "node_tests",
    timeout = "short",
    bootstrap = ["preboot/test/angular-test-node-spec.js"],
    deps = [
        ":common_test_sources",
        "//:angular_bundles",
        "//:angular_test_bundles",
        "//:tslib_bundle",
        "//test:angular_test_node",
    ],
)
